fixed alignment issues in mobile form factor

--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -103,6 +103,7 @@ table tfoot td {
 
 .post, .article-page {
   background-color: #fff;
+  max-width: 100%;
 }
 
 ::-moz-selection {
